# ocypod

./: .appveyor.yml  .travis.yml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  mkdocs.yml
.github/workflows/: ci.yml  docker_publish.yml
docs/: api.md  configuration.md  core_concepts.md  index.md  installation.md  internals.md  quickstart.md  requirements.txt  workers.md
examples/ocypod-redis-docker/: README.md  docker-compose.yml  ocypod.toml
src/: config.rs  lib.rs  redis_utils.rs
src/actors/: application.rs  mod.rs  monitor.rs
src/application/: job.rs  keys.rs  manager.rs  mod.rs  monitor.rs  queue.rs  tag.rs
src/handlers/: health.rs  info.rs  job.rs  mod.rs  queue.rs  tag.rs
src/models/: datetime.rs  duration.rs  error.rs  mod.rs  state.rs
src/models/job/: field.rs  mod.rs  payload.rs  request.rs  status.rs
src/models/queue/: field.rs  mod.rs  settings.rs  summary.rs
tests/: test_basic.rs
tests/support/: mod.rs
