[package]
name = "ocypod"
version = "0.6.0"
authors = ["Dave Challis <dave@suicas.net>"]
description = "Ocypod is a Redis-backed service for orchestrating background jobs."
repository = "https://github.com/davechallis/ocypod"
license = "Apache-2.0"
readme = "README.md"
edition = "2018"

[badges]
travis-ci = { repository = "davechallis/ocypod" }
appveyor = { repository = "davechallis/ocypod" }

[dependencies]
structopt = "0.3"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
human-size = "0.4"
chrono = { version = "0.4", features = ["serde"] }
redis = { version = "0.17", features = ["connection-manager"] }
log = "0.4"
humantime = "2.0"
env_logger = "0.7"
actix-web = "3.3"
actix-rt = "1.0"

[dev-dependencies]
net2 = "0.2"
rand = "0.4"
tempdir = "0.3"
futures = "0.3"
