[package]
name = "ocypod"
version = "0.8.0"
authors = ["Dave Challis <dave@suicas.net>"]
description = "Ocypod is a Redis-backed service for orchestrating background jobs."
repository = "https://github.com/davechallis/ocypod"
license = "Apache-2.0"
readme = "README.md"
edition = "2021"

[badges]
travis-ci = { repository = "davechallis/ocypod" }
appveyor = { repository = "davechallis/ocypod" }

[dependencies]
structopt = "0.3"
tokio = { version = "1.32", features = ["macros"] }
serde = { version = "1.0", features = ["serde_derive"], default-features = false }
serde_json = { version = "1.0", default-features = false }
toml = "0.5"
human-size = "0.4"
chrono = { version = "0.4", features = ["clock", "serde"], default-features = false }
redis = { version = "0.23", default-features = false }
log = "0.4"
humantime = "2.0"
env_logger = { version = "0.7", default-features = false }
actix-web = { version = "4", features = ["macros"], default-features = false }
deadpool-redis = "0.12"
regex = { version = "1.9", default-features = false }

[dev-dependencies]
net2 = { version = "0.2", default-features = false }
rand = "0.4"
tempfile = "3.2"
futures = { version = "0.3", default-features = false }
socket2 = "0.3"
